--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
     <body>
-    <main>
+    <main >
         <h2 class="calc">Calculator</h2>
-        <div class="inputs flex flex-column mw-20 width">
+        <div class="inputs flex flex-column mw-20 width bbg-black ">
             
             <input type="text" class="screen" id="scratch">
             <div class="row flex-button flex-button-topr">
